# audio-interface

./: LICENSE  Makefile  README.md  pyproject.toml
proto/: audio-message.proto  clone-interface.proto  transcribe-interface.proto
scripts/: .env_example  build_proto_packages.py  setup_git_repos.py
scripts/templates/: client_usage_example.md.j2  clone_client_example.py.j2  clone_client_methods.py.j2  clone_handlers.py.j2  clone_server_methods.py.j2  grpc_client_wrapper.py.j2  grpc_server_launcher.py.j2  grpc_server_skeleton.py.j2  messages_package_init.py.j2  messages_usage_example.md.j2  package_readme.md.j2  python_package_config.toml.j2  server_usage_example.md.j2  server_with_launcher_example.py.j2  stop_server.py.j2  transcribe_client_example.py.j2  transcribe_client_methods.py.j2  transcribe_handlers.py.j2  transcribe_server_methods.py.j2
